<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_location_label" translatable="false">Location</string>
    <string name="pref_location_key" translatable="false">Location</string>
    <string name="pref_location_default">Kathmandu</string>

    <string name="pref_unit_label" translatable="false">Temperature</string>
    <string name="pref_unit_key" translatable="false">Temperature</string>
    <string name="pref_unit_option_1">Celsius (°C)</string>
    <string name="pref_unit_option_2">Fahrenheit (°F)</string>
    <string name="pref_unit_metric">metric</string>
    <string name="pref_unit_imperial">imperial</string>

    <string name="action_map">Map Location</string>
</resources>